architecture-ide/tests/fixtures/negative/loader/bad_concept/syncs/log.sync
sync LogInc

  when
    Counter/inc: [ n: ?n ] => [ total: ?t ]
  then
    Log/append: [ event: ?n ]
